k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: doom-backend-svc
  labels:
    app: doom-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: doom-backend
