k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doom-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: api.doom-index.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: doom-backend-svc
                port:
                  number: 80
  tls:
    - hosts:
        - api.doom-index.com
      secretName: doom-backend-tls
